# nrf9151-batteryless-cellular-iot

./: CMakeLists.txt  Kconfig  README.md  overlay_low_power.conf  prj.conf
boards/: conexio_stratus_pro_nrf9151_ns.overlay  conexio_stratus_pro_nrf9161_ns.conf
src/: app_sensors.c  app_sensors.h  app_settings.c  cellular_nrf91.c  fuel_gauge.c  fuel_gauge.h  location_tracking.c  location_tracking.h  main.c  main.h
